<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alumnedam.examen.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aritmetica"
            android:gravity="center_horizontal"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Preguntes"
            android:textSize="20sp"
            android:gravity="center_horizontal"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">



            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <RadioButton android:id="@+id/curt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/curt"
                    android:onClick="seleccionarDificultat"/>
                <RadioButton android:id="@+id/mitj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mitj"
                    android:onClick="seleccionarDificultat"/>
                <RadioButton android:id="@+id/llarg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/llarg"
                    android:onClick="seleccionarDificultat"/>
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">




            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <RadioButton android:id="@+id/suma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suma"
                    android:onClick="seleccionarTipus"/>
                <RadioButton android:id="@+id/resta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resta"
                    android:onClick="seleccionarTipus"/>
                <RadioButton android:id="@+id/sumayresta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sumaresta"
                    android:onClick="seleccionarTipus"/>
            </RadioGroup>






        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="70dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="22dp"
            android:paddingLeft="10dp"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_nombre"
            android:id="@+id/et_nombre" />

    </LinearLayout>

</LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1">

                <Button

                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:text="@string/comenzar"
                    android:id="@+id/btn_comenzar"
                    android:layout_weight="0.09" />
            </LinearLayout>

        </LinearLayout>
</LinearLayout>
