<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_proves"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alumnedam.examen.Proves"
    android:weightSum="1"
    android:orientation="vertical">
<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta"
        android:textSize="20sp"
        android:id="@+id/pregunta"
        android:gravity="center_horizontal"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="200dp">
    <EditText
        android:layout_marginTop="50dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:hint="@string/hint_resposta"
        android:id="@+id/et_resposta"/>

    <Button

        android:layout_width="10dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:text="@string/seguent"
        android:id="@+id/btn_seguent"
        android:layout_weight="0.09" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1">


        <Button

            android:layout_width="70dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:text="@string/finale"
            android:id="@+id/btn_final"
            android:layout_weight="0.09" />
    </LinearLayout>
</LinearLayout>
